modules/third_party/vma/vma.odin

package vma

import vk "vendor:vulkan"

foreign import "external/vma.lib"

import _c "core:c"

AMD_VULKAN_MEMORY_ALLOCATOR_H :: 1;
VULKAN_VERSION :: 1003000;
DEDICATED_ALLOCATION :: 1;
BIND_MEMORY2 :: 1;
MEMORY_BUDGET :: 1;
BUFFER_DEVICE_ADDRESS :: 1;
MEMORY_PRIORITY :: 1;
EXTERNAL_MEMORY :: 1;
CALL_PRE :: 1;
CALL_POST :: 1;
NOT_NULL_ :: 1;
_ :: 1;
STATS_STRING_ENABLED :: 1;

AllocatorCreateFlags :: vk.Flags;
AllocationCreateFlags :: vk.Flags;
PoolCreateFlags :: vk.Flags;
DefragmentationFlags :: vk.Flags;
VirtualBlockCreateFlags :: vk.Flags;
VirtualAllocationCreateFlags :: vk.Flags;
Allocator :: ^AllocatorT;
Pool :: ^PoolT;
Allocation :: ^AllocationT;
DefragmentationContext :: ^DefragmentationContextT;
VirtualAllocation :: ^VirtualAllocationT;
VirtualBlock :: ^VirtualBlockT;
PFN_AllocateDeviceMemoryFunction :: #type proc(allocator : Allocator, memoryType : u32, memory : vk.DeviceMemory, size : vk.DeviceSize, pUserData : rawptr);
PFN_FreeDeviceMemoryFunction :: #type proc(allocator : Allocator, memoryType : u32, memory : vk.DeviceMemory, size : vk.DeviceSize, pUserData : rawptr);

AllocatorCreateFlagBits :: enum i32 {
    AllocatorCreateExternallySynchronizedBit = 1,
    AllocatorCreateKhrDedicatedAllocationBit = 2,
    AllocatorCreateKhrBindMemory2Bit = 4,
    AllocatorCreateExtMemoryBudgetBit = 8,
    AllocatorCreateAmdDeviceCoherentMemoryBit = 16,
    AllocatorCreateBufferDeviceAddressBit = 32,
    AllocatorCreateExtMemoryPriorityBit = 64,
    MaxEnum = 2147483647,
};

MemoryUsage :: enum i32 {
    Unknown = 0,
    GpuOnly = 1,
    CpuOnly = 2,
    CpuToGpu = 3,
    GpuToCpu = 4,
    CpuCopy = 5,
    GpuLazilyAllocated = 6,
    Auto = 7,
    AutoPreferDevice = 8,
    AutoPreferHost = 9,
    MaxEnum = 2147483647,
};

AllocationCreateFlagBits :: enum i32 {
    AllocationCreateDedicatedMemoryBit = 1,
    AllocationCreateNeverAllocateBit = 2,
    AllocationCreateMappedBit = 4,
    AllocationCreateUserDataCopyStringBit = 32,
    AllocationCreateUpperAddressBit = 64,
    AllocationCreateDontBindBit = 128,
    AllocationCreateWithinBudgetBit = 256,
    AllocationCreateCanAliasBit = 512,
    AllocationCreateHostAccessSequentialWriteBit = 1024,
    AllocationCreateHostAccessRandomBit = 2048,
    AllocationCreateHostAccessAllowTransferInsteadBit = 4096,
    AllocationCreateStrategyMinMemoryBit = 65536,
    AllocationCreateStrategyMinTimeBit = 131072,
    AllocationCreateStrategyMinOffsetBit = 262144,
    AllocationCreateStrategyBestFitBit = 65536,
    AllocationCreateStrategyFirstFitBit = 131072,
    AllocationCreateStrategyMask = 65536,
    MaxEnum = 2147483647,
};

PoolCreateFlagBits :: enum i32 {
    PoolCreateIgnoreBufferImageGranularityBit = 2,
    PoolCreateLinearAlgorithmBit = 4,
    PoolCreateAlgorithmMask = 4,
    MaxEnum = 2147483647,
};

DefragmentationFlagBits :: enum i32 {
    DefragmentationFlagAlgorithmFastBit = 1,
    DefragmentationFlagAlgorithmBalancedBit = 2,
    DefragmentationFlagAlgorithmFullBit = 4,
    DefragmentationFlagAlgorithmExtensiveBit = 8,
    DefragmentationFlagAlgorithmMask = 1,
    MaxEnum = 2147483647,
};

DefragmentationMoveOperation :: enum i32 {
    Copy = 0,
    Ignore = 1,
    Destroy = 2,
};

VirtualBlockCreateFlagBits :: enum i32 {
    VirtualBlockCreateLinearAlgorithmBit = 1,
    VirtualBlockCreateAlgorithmMask = 1,
    MaxEnum = 2147483647,
};

VirtualAllocationCreateFlagBits :: enum i32 {
    VirtualAllocationCreateUpperAddressBit = 64,
    VirtualAllocationCreateStrategyMinMemoryBit = 65536,
    VirtualAllocationCreateStrategyMinTimeBit = 131072,
    VirtualAllocationCreateStrategyMinOffsetBit = 262144,
    VirtualAllocationCreateStrategyMask = 65536,
    MaxEnum = 2147483647,
};

AllocatorT :: struct {};

PoolT :: struct {};

AllocationT :: struct {};

DefragmentationContextT :: struct {};

VirtualAllocationT :: struct {};

VirtualBlockT :: struct {};

DeviceMemoryCallbacks :: struct {
    pfnAllocate : PFN_AllocateDeviceMemoryFunction,
    pfnFree : PFN_FreeDeviceMemoryFunction,
    pUserData : rawptr,
};

VulkanFunctions :: struct {
    vkGetInstanceProcAddr : vk.ProcGetInstanceProcAddr,
    vkGetDeviceProcAddr : vk.ProcGetDeviceProcAddr,
    vkGetPhysicalDeviceProperties : vk.ProcGetPhysicalDeviceProperties,
    vkGetPhysicalDeviceMemoryProperties : vk.ProcGetPhysicalDeviceMemoryProperties,
    vkAllocateMemory : vk.ProcAllocateMemory,
    vkFreeMemory : vk.ProcFreeMemory,
    vkMapMemory : vk.ProcMapMemory,
    vkUnmapMemory : vk.ProcUnmapMemory,
    vkFlushMappedMemoryRanges : vk.ProcFlushMappedMemoryRanges,
    vkInvalidateMappedMemoryRanges : vk.ProcInvalidateMappedMemoryRanges,
    vkBindBufferMemory : vk.ProcBindBufferMemory,
    vkBindImageMemory : vk.ProcBindImageMemory,
    vkGetBufferMemoryRequirements : vk.ProcGetBufferMemoryRequirements,
    vkGetImageMemoryRequirements : vk.ProcGetImageMemoryRequirements,
    vkCreateBuffer : vk.ProcCreateBuffer,
    vkDestroyBuffer : vk.ProcDestroyBuffer,
    vkCreateImage : vk.ProcCreateImage,
    vkDestroyImage : vk.ProcDestroyImage,
    vkCmdCopyBuffer : vk.ProcCmdCopyBuffer,
    vkGetBufferMemoryRequirements2KHR : vk.ProcGetBufferMemoryRequirements2KHR,
    vkGetImageMemoryRequirements2KHR : vk.ProcGetImageMemoryRequirements2KHR,
    vkBindBufferMemory2KHR : vk.ProcBindBufferMemory2KHR,
    vkBindImageMemory2KHR : vk.ProcBindImageMemory2KHR,
    vkGetPhysicalDeviceMemoryProperties2KHR : vk.ProcGetPhysicalDeviceMemoryProperties2KHR,
    vkGetDeviceBufferMemoryRequirements : vk.ProcGetDeviceBufferMemoryRequirements,
    vkGetDeviceImageMemoryRequirements : vk.ProcGetDeviceImageMemoryRequirements,
};

AllocatorCreateInfo :: struct {
    flags : AllocatorCreateFlags,
    physicalDevice : vk.PhysicalDevice,
    device : vk.Device,
    preferredLargeHeapBlockSize : vk.DeviceSize,
    pAllocationCallbacks : ^vk.AllocationCallbacks,
    pDeviceMemoryCallbacks : ^DeviceMemoryCallbacks,
    pHeapSizeLimit : ^vk.DeviceSize,
    pVulkanFunctions : ^VulkanFunctions,
    instance : vk.Instance,
    vulkanApiVersion : u32,
    pTypeExternalMemoryHandleTypes : ^vk.ExternalMemoryHandleTypeFlagsKHR,
};

AllocatorInfo :: struct {
    instance : vk.Instance,
    physicalDevice : vk.PhysicalDevice,
    device : vk.Device,
};

Statistics :: struct {
    blockCount : u32,
    allocationCount : u32,
    blockBytes : vk.DeviceSize,
    allocationBytes : vk.DeviceSize,
};

DetailedStatistics :: struct {
    statistics : Statistics,
    unusedRangeCount : u32,
    allocationSizeMin : vk.DeviceSize,
    allocationSizeMax : vk.DeviceSize,
    unusedRangeSizeMin : vk.DeviceSize,
    unusedRangeSizeMax : vk.DeviceSize,
};

TotalStatistics :: struct {
    memoryType : [vk.MAX_MEMORY_TYPES]DetailedStatistics,
    memoryHeap : [vk.MAX_MEMORY_HEAPS]DetailedStatistics,
    total : DetailedStatistics,
};

Budget :: struct {
    statistics : Statistics,
    usage : vk.DeviceSize,
    budget : vk.DeviceSize,
};

AllocationCreateInfo :: struct {
    flags : AllocationCreateFlags,
    usage : MemoryUsage,
    requiredFlags : vk.MemoryPropertyFlags,
    preferredFlags : vk.MemoryPropertyFlags,
    memoryTypeBits : u32,
    pool : Pool,
    pUserData : rawptr,
    priority : _c.float,
};

PoolCreateInfo :: struct {
    memoryTypeIndex : u32,
    flags : PoolCreateFlags,
    blockSize : vk.DeviceSize,
    minBlockCount : _c.size_t,
    maxBlockCount : _c.size_t,
    priority : _c.float,
    minAllocationAlignment : vk.DeviceSize,
    pMemoryAllocateNext : rawptr,
};

AllocationInfo :: struct {
    memoryType : u32,
    deviceMemory : vk.DeviceMemory,
    offset : vk.DeviceSize,
    size : vk.DeviceSize,
    pMappedData : rawptr,
    pUserData : rawptr,
    pName : cstring,
};

DefragmentationInfo :: struct {
    flags : DefragmentationFlags,
    pool : Pool,
    maxBytesPerPass : vk.DeviceSize,
    maxAllocationsPerPass : u32,
};

DefragmentationMove :: struct {
    operation : DefragmentationMoveOperation,
    srcAllocation : Allocation,
    dstTmpAllocation : Allocation,
};

DefragmentationPassMoveInfo :: struct {
    moveCount : u32,
    pMoves : ^DefragmentationMove,
};

DefragmentationStats :: struct {
    bytesMoved : vk.DeviceSize,
    bytesFreed : vk.DeviceSize,
    allocationsMoved : u32,
    deviceMemoryBlocksFreed : u32,
};

VirtualBlockCreateInfo :: struct {
    size : vk.DeviceSize,
    flags : VirtualBlockCreateFlags,
    pAllocationCallbacks : ^vk.AllocationCallbacks,
};

VirtualAllocationCreateInfo :: struct {
    size : vk.DeviceSize,
    alignment : vk.DeviceSize,
    flags : VirtualAllocationCreateFlags,
    pUserData : rawptr,
};

VirtualAllocationInfo :: struct {
    offset : vk.DeviceSize,
    size : vk.DeviceSize,
    pUserData : rawptr,
};


create_vulkan_functions :: proc() -> VulkanFunctions {
	return {
        vkGetInstanceProcAddr = vk.GetInstanceProcAddr,
        vkGetDeviceProcAddr = vk.GetDeviceProcAddr,
		vkAllocateMemory = vk.AllocateMemory,
		vkBindBufferMemory = vk.BindBufferMemory,
		vkBindBufferMemory2KHR = vk.BindBufferMemory2,
		vkBindImageMemory = vk.BindImageMemory,
		vkBindImageMemory2KHR = vk.BindImageMemory2,
		vkCmdCopyBuffer = vk.CmdCopyBuffer,
		vkCreateBuffer = vk.CreateBuffer,
		vkCreateImage = vk.CreateImage,
		vkDestroyBuffer = vk.DestroyBuffer,
		vkDestroyImage = vk.DestroyImage,
		vkFlushMappedMemoryRanges = vk.FlushMappedMemoryRanges,
		vkFreeMemory = vk.FreeMemory,
		vkGetBufferMemoryRequirements = vk.GetBufferMemoryRequirements,
		vkGetBufferMemoryRequirements2KHR = vk.GetBufferMemoryRequirements2,
		vkGetImageMemoryRequirements = vk.GetImageMemoryRequirements,
		vkGetImageMemoryRequirements2KHR = vk.GetImageMemoryRequirements2,
		vkGetPhysicalDeviceMemoryProperties = vk.GetPhysicalDeviceMemoryProperties,
		vkGetPhysicalDeviceMemoryProperties2KHR = vk.GetPhysicalDeviceMemoryProperties2,
		vkGetPhysicalDeviceProperties = vk.GetPhysicalDeviceProperties,
		vkInvalidateMappedMemoryRanges = vk.InvalidateMappedMemoryRanges,
		vkMapMemory = vk.MapMemory,
		vkUnmapMemory = vk.UnmapMemory,
	};
}

@(default_calling_convention="c")
foreign vma {

    @(link_name="vkGetInstanceProcAddr")
    vkGetInstanceProcAddr : vk.ProcGetInstanceProcAddr;

    @(link_name="vkGetDeviceProcAddr")
    vkGetDeviceProcAddr : vk.ProcGetDeviceProcAddr;

    @(link_name="vkGetPhysicalDeviceProperties")
    vkGetPhysicalDeviceProperties : vk.ProcGetPhysicalDeviceProperties;

    @(link_name="vkGetPhysicalDeviceMemoryProperties")
    vkGetPhysicalDeviceMemoryProperties : vk.ProcGetPhysicalDeviceMemoryProperties;

    @(link_name="vkAllocateMemory")
    vkAllocateMemory : vk.ProcAllocateMemory;

    @(link_name="vkFreeMemory")
    vkFreeMemory : vk.ProcFreeMemory;

    @(link_name="vkMapMemory")
    vkMapMemory : vk.ProcMapMemory;

    @(link_name="vkUnmapMemory")
    vkUnmapMemory : vk.ProcUnmapMemory;

    @(link_name="vkFlushMappedMemoryRanges")
    vkFlushMappedMemoryRanges : vk.ProcFlushMappedMemoryRanges;

    @(link_name="vkInvalidateMappedMemoryRanges")
    vkInvalidateMappedMemoryRanges : vk.ProcInvalidateMappedMemoryRanges;

    @(link_name="vkBindBufferMemory")
    vkBindBufferMemory : vk.ProcBindBufferMemory;

    @(link_name="vkBindImageMemory")
    vkBindImageMemory : vk.ProcBindImageMemory;

    @(link_name="vkGetBufferMemoryRequirements")
    vkGetBufferMemoryRequirements : vk.ProcGetBufferMemoryRequirements;

    @(link_name="vkGetImageMemoryRequirements")
    vkGetImageMemoryRequirements : vk.ProcGetImageMemoryRequirements;

    @(link_name="vkCreateBuffer")
    vkCreateBuffer : vk.ProcCreateBuffer;

    @(link_name="vkDestroyBuffer")
    vkDestroyBuffer : vk.ProcDestroyBuffer;

    @(link_name="vkCreateImage")
    vkCreateImage : vk.ProcCreateImage;

    @(link_name="vkDestroyImage")
    vkDestroyImage : vk.ProcDestroyImage;

    @(link_name="vkCmdCopyBuffer")
    vkCmdCopyBuffer : vk.ProcCmdCopyBuffer;

    @(link_name="vkGetBufferMemoryRequirements2")
    vkGetBufferMemoryRequirements2 : vk.ProcGetBufferMemoryRequirements2;
